# cloud-plane-seg

./: .gitignore  LICENSE.txt  README.md
src/: CMakeLists.txt  main.cpp
